k8s/expense/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expense
  labels:
    app.kubernetes.io/name: expense
    environment: dev
