k8s/expense/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-frontend
  namespace: expense
  labels:
    app: expense-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expense-frontend
  template:
    metadata:
      labels:
        app: expense-frontend
    spec:
      containers:
        - name: frontend
          image: 318432260649.dkr.ecr.us-east-1.amazonaws.com/expense-dev-frontend:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
