k8s/expense/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-backend
  namespace: expense
  labels:
    app: expense-backend
spec:
  type: ClusterIP
  selector:
    app: expense-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
